fixed footer overlapping content

--- a/style.scss
+++ b/style.scss
@@ -15,13 +15,14 @@ body {
   background-repeat: no-repeat;
   background-size: 100%;
   background-attachment: fixed;
+  padding-bottom: 50px;
 }
 
 .wrap {
   background-color: rgb(255,255,255,0.5);
   width: 90%;
   margin: auto;
-  margin-bottom: 5%;
+  margin-bottom: 10px;
   margin-top: 2%;
   padding: 10px;
 }
@@ -29,6 +30,7 @@ body {
 footer {
   background-color: white;
   padding: 0.5%;
+  height: 50px;
   position: fixed;
   width: 100%;
   bottom: 0;
